<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="tbox_app_name">T-Box call</string>
    <string name="callmycar_app_name">CallMyCar</string>
    <string name="icall_app_name">VoiceNavi</string>
    <string name="bcall_app_name">Rescue</string>
      <string name="ecall_app_name">SOS Services</string>
    <string name="call_ok">OK</string>
    <string name="call_info_text_fail">Call fail,plelse call againt later!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="add_white">add to list</string>
    <string name="add_white_please">please add to the list ！</string>
    <string name="delete_white">delete from list</string>
    <string name="update_white">update list</string>
    <string name="no">cancel</string>
    <string name="ok">OK</string>
    <string name="info">will delete the:<xliff:g id="name" example="Browser">%s</xliff:g> from the list!</string>
    <string name="input_num">please input the phone number...</string>
    <string name="icall_status_waiting">please wait ...</string>
    <string name="input_name">please input the name...</string>
    <string name="icall_status_connetting">connecting services ...</string>
    <string name="icall_tboxStatusErr">T-Box ERR!</string>
    <string name="icall_tboxExitInfo">Are you sure to exit,the phone is busy now?</string>
    <string name="icall_servicesServiceCalling">calling services...</string>
    <string name="icall_servicesServiceOnCalling">on the phone...</string>
    <string name="icall_TboxCallEnd">Ring off!</string>
    <string name="icall_servicesEnd">Service End！</string>
      <string name="icall_servicesDataErr">Service Data ERR！</string>
       <string name="icall_servicesERR_NotGetPoi">has not get the POI info</string>
    
    <string name="icall_servicesConnectErr">Connect err! plese try againt later!</string>
    <string name="icall_servicesOverTime">Connect OverTime Err! Exit!</string>
    <string name="icall_AreYouSureExit">Are you sure exit ?</string>
    <string name="bcall_status_connetting">connecting service...</string>
    
    <string name="bcall_onThePhoneCanNotEixt">It is on the phone can not exit !</string>
       <string name="Eixt_ing">Closing the service , please wait a minute ！</string>
    <string name="bcall_autoAnswer">rescue call back will auto hand set...</string>
    <string name="bcall_callIsOverAndCallAgaint">The phone call is end ,but is in services ! please try it againt!</string>
    <string name="bcall_servicesEnd">Service is end!</string>
    <string name="bcall_servicesOverTime">Service is overtime err!</string>
    <string name="bcall_servicesConnectErr">connecting err!</string>
    <string name="bcall_servicesServiceCalling">calling services...</string>
    <string name="bcall_servicesServiceConnecting">connecting services ...</string>
    <string name="bcall_servicesServiceCallEnd">Ring off!</string>
    <string name="bcall_AreYouSureExit">Are you sure exit ?</string>
    <string name="bcall_startNavi">starting Navigation ... </string>
    <string name="bcall_gettingPoi">getting the POI info...</string>
    <string name="bcall_serviceEnd">Service end !</string>
    <string name="bcall_tboxErr">Tbox Err!</string>
    <string name="mycall_onThePhone">on the phone ...</string>
    <string name="mycall_endOffThePhone">Ring Off!</string>
    <string name="mycall_editTextIsNull">user name or phone number can not be null !</string>
    <string name="mycall_phoneCallIn">phone call in :</string>
    <string name="ecall_inECallStatus">In SOS Services</string>
    <string name="send2car_dataErr">Location info Err,please try it again !</string>
  

</resources>