<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/bcall_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25px"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bcall_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bcall_status_connetting"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bcall_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bcalling_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:text="--:--:--"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70px"
                android:layout_marginTop="50px"
                android:background="@drawable/bcalling_icon"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/bcall_state_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/end_icall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35px"
                    android:background="@drawable/end_bcall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bcall_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/info_bg"
            android:gravity="top|center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px"
                android:text="@string/bcall_app_name"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bcall_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:singleLine="true"
                android:text="@string/call_info_text_fail"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bcall_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/call_ok"
                    android:gravity="center"
                    android:text="@string/call_ok" />

                <Button
                    android:id="@+id/bcall_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:text="@string/no" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/prog_waitting"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:layout_marginBottom="20px"
            android:visibility="gone" >
        </ProgressBar>
    </FrameLayout>

</LinearLayout>