<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/bcall_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25px"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/phone_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mycall_phoneCallIn"
                android:textColor="#ffffff"
                android:layout_margin="20dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mycall_phoneCallIn"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/call_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calling_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:text="--:--:--"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/end_phonecall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35px"
                    android:background="@drawable/end_bcall" />

                <ImageView
                    android:id="@+id/answer_phonecall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35px"
                    android:background="@drawable/bcall_unmute" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bcall_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/info_bg"
            android:gravity="top|center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px"
                android:text="@string/bcall_app_name"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bcall_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:singleLine="true"
                android:text="@string/call_info_text_fail"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bcall_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:background="@drawable/call_ok"
                android:gravity="center"
                android:text="@string/call_ok" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>