<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="carnetapp.tbox.icall.ICallActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:background="@drawable/call_ok"
            android:gravity="center"
            android:text="TEST"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/icall_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25px"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/icall_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icall_status_connetting"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/icall_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4000 000 000"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/icalling_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:text="--:--:--"
                android:textColor="#ffffff"
                android:textSize="12sp" />

     <LinearLayout
            android:id="@+id/waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/prog"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginBottom="40px" >
            </ProgressBar>
          
        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPoiContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/end_icall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35px"
                    android:background="@drawable/end_bcall" />

                <ImageView
                    android:id="@+id/bcall_mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35px"
                    android:background="@drawable/bcall_unmute"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icall_info_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/info_bg"
            android:gravity="top|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvIcallToastShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px"
                android:text="@string/icall_app_name"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvIcallToastInfoBeforeEixt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
               
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60px"
                android:gravity="center"
                android:text="@string/call_info_text_fail"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/icall_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/call_ok"
                    android:gravity="center"
                    android:text="@string/call_ok" />

                <Button
                    android:id="@+id/icall_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:text="@string/no" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>